Fix animation rendering interrupts caused by autosave

KisRegenerateFrameStrokeStrategy should not be forgettable when
the user wants to render his/her video.

BUG:438754